--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
                                 <table style="text-align: left; width:
@@ -370,7 +374,15 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Sunday, Oct. 8<sup>th</sup> (tentative)</td>
+                                      <td id="EventDate">Saturday &amp; Sunday, Sep. 30<sup>th</sup> &amp; Oct 1<sup>st</sup></td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/powwow.html">
+                                      Pow Wow &amp; Native American Craft Fair
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, Oct. 8<sup>th</sup></td>
                                       <td id="Event">
                                       <a target="_blank" href="http://www.bowwowsandmeows.org/">
                                       Bow Wows &amp; Meows pet fair
