Added Animal Open House and deleted past events

--- a/index.htm
+++ b/index.htm
@@ -290,14 +290,6 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
-<a href="Event_Pages/cowboyfest.html">
-<h2 align="center">Cowboy Festival events at The Hart
-<img align="center" src="Event_Pages/cowboyfest2017/cowboyfest2017.jpg"/>
-</h2>
-</a>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
@@ -309,20 +301,11 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Friday &amp; Saturday, 
-                                            Apr. 21<sup>st</sup> &amp; 22<sup>nd</sup></td>
+                                      <td id="EventDate">Wednesday, 
+                                            May 10<sup>th</sup> noon&ndash;4pm</td>
                                       <td id="Event">
-                                      <a href="Event_Pages/cowboyfest.html">
-                                      Cowboy Festival events at The Hart
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, 
-                                            May 6<sup>th</sup> &amp; 7<sup>th</sup> 10am&ndash;8pm</td>
-                                      <td id="Event">
-                                        <a href="Event_Pages/2017polyfest.jpg" rel="lightbox[pacific]">
-                                      Pacific Islander Festival
+                                        <a href="Event_Pages/AnimalOpenHouse2017.jpg" rel="lightbox[animals]">
+                                      Animal Open House
                                         </a>
                                       </td>
                                     </tr>
