--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@ Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration 
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
+<a href="Event_Pages/AnimalOpenHouse2017.jpg" rel="lightbox[animals]">
+<h3>Come see the latest additions to our barnyard!</h3>
+<img align="center" src="images/2017additions.jpg"/>
+</a>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
