Added photos from Cowboy Fest

--- a/index.htm
+++ b/index.htm
@@ -203,7 +203,27 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 <tr>
                                 <td>
 <h3 align="center"?>
-Click below for photos of the <i>Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
+Click below for photos of the <i>2017 Cowboys Festival</i> events that took place Bill Hart's living room<br>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_00.jpg" title="Dave Stamey" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_00.jpg" /></a>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_01.jpg" title="Dave Stamey" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_01.jpg" /></a>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_14.jpg" title="Wyatt Earp historian Nicholas Cataldo" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_14.jpg" /></a>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_15.jpg" title="Wyatt Earp historians Garner Palenske &amp;  Nicholas Cataldo" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_15.jpg" /></a>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_16.jpg" title="Wyatt Earp historian Garner Palenske" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_16.jpg" /></a>
+<a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_17.jpg" title="Wyatt Earp historians Garner Palenske &amp;  Nicholas Cataldo" rel="lightbox[cowboyfest]">
+<img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_17.jpg" /></a>
+</h3>
+<sm>Photos courtesy of Museum Volunteer Coordinator David Paul</sm>
+                                </td>
+                                </tr>
+                                <tr>
+                                <td>
+<h3 align="center"?>
+Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
 <a href=        "Event_Pages/cowboyscarols2016/Hart-0.jpg" rel="lightbox[carols]">
 <img src="Event_Pages/cowboyscarols2016/thumbs/Hart-0.jpg" /></a>
 <a href=        "Event_Pages/cowboyscarols2016/Hart-1.jpg" rel="lightbox[carols]">
