--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       <td id="EventDate">Saturday &amp; Sunday, 
                                             May 20<sup>th</sup> &amp; 21<sup>st</sup> 10am&ndash;4pm</td>
                                       <td id="Event">
+                                        <a href="Event_Pages/artisan2017.png" rel="lightbox[artisan]">
                                       Artisan Row Home Arts &amp; Crafts Show
+                                        </a>
                                       </td>
                                     </tr>
                                     <tr>
