Added Music in the Park event.  Removed past Animal Open house.

--- a/index.htm
+++ b/index.htm
@@ -310,9 +310,12 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 -->
-<a href="Event_Pages/AnimalOpenHouse2017.jpg" rel="lightbox[animals]">
-<h3>Come see the latest additions to our barnyard!</h3>
-<img align="center" src="images/2017additions.jpg"/>
+<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
+<h3>Come listen to Music in the Park!</h3>
+</a>
+<h4>Saturday, June 3<sup>rd</sup> 1pm&ndash;4pm</h4>
+<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
+<img align="center" src="Event_Pages/music2017/bacorado.jpg"/>
 </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
@@ -326,15 +329,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Wednesday, 
-                                            May 10<sup>th</sup> noon&ndash;4pm</td>
-                                      <td id="Event">
-                                        <a href="Event_Pages/AnimalOpenHouse2017.jpg" rel="lightbox[animals]">
-                                      Animal Open House
-                                        </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, 
                                             May 20<sup>th</sup> &amp; 21<sup>st</sup> 10am&ndash;4pm</td>
                                       <td id="Event">
@@ -344,9 +338,11 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, June 3<sup>rd</sup></td>
+                                      <td id="EventDate">Saturday, June 3<sup>rd</sup> 1pm&ndash;4pm</td>
                                       <td id="Event">
+<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
                                       "Hart of the West" Music in the Park
+</a>
                                       </td>
                                     </tr>
                                     <tr>
