--- a/index.htm
+++ b/index.htm
@@ -306,10 +306,14 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <a href="Event_Pages/silents.html">
                                     Click here </a> for more info!</h3>
                                     </p>
+-->
+<a href="Event_Pages/silents.html">
+<h2 align="center">Get your tickets to this year's Silents Under the Stars here!</h2>
+<img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
+</a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
--->
 <a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
 <h3>Come listen to Music in the Park!</h3>
 </a>
@@ -318,7 +322,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
 <img align="center" src="Event_Pages/music2017/bacorado.jpg"/>
 </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -328,15 +331,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Saturday &amp; Sunday, 
-                                            May 20<sup>th</sup> &amp; 21<sup>st</sup> 10am&ndash;4pm</td>
-                                      <td id="Event">
-                                        <a href="Event_Pages/artisan2017.png" rel="lightbox[artisan]">
-                                      Artisan Row Home Arts &amp; Crafts Show
-                                        </a>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">Saturday, June 3<sup>rd</sup> 1pm&ndash;4pm</td>
                                       <td id="Event">
@@ -367,7 +361,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <tr>
                                       <td id="EventDate">Saturday, Jul. 29<sup>th</sup></td>
                                       <td id="Event">
+                                    <a href="Event_Pages/silents.html">
                                       Silents Under the Stars
+</a>
                                       </td>
                                     </tr>
                                     <tr>
