Changed the wording since there are apparently no longer any tickets.

--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -308,9 +308,9 @@ Featuring singing cowgirls Shona, Karona & Katriona performing Western Skiffle o
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
 												<span style="font-size: medium; border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 												<font size="5" face="Copperplate Gothic Bold">
-												Proceed to Will Call at 
+												Proceed to 
 												<a href="../Hart_Hall/hart_hall.html">Hart Hall</a>
-												to check in and pick up your ticket.
+												to check in and join the fun!
 												</font></span></p>
 												</span>
 												<p style="margin-top: 0; margin-bottom: 0" align="center">
