Added Saxtravaganza, removed bacorado

--- a/index.htm
+++ b/index.htm
@@ -221,6 +221,14 @@ Click below for photos of the <i>2017 Cowboys Festival</i> events that took plac
                                 </td>
                                 </tr>
                                 <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
                                 <td>
 <h3 align="center"?>
 Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebration of Bill Hart's birthday<br>
@@ -314,16 +322,14 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       margin-bottom: 5px" align="center">
 </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
-<h3>Come listen to Music in the Park!</h3>
+<h>Come listen to Music in the Park!</h3>
+<a target="_blank" href="http://www.saxtravaganza.com">
+<h4>Saxtravaganza takes the stage for 18th year!</h4>
 </a>
-<h4>Saturday, June 3<sup>rd</sup> 1pm&ndash;4pm</h4>
-<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
-<img align="center" src="Event_Pages/music2017/bacorado.jpg"/>
+<h4>Sunday, June 25<sup>th</sup> 7pm</h4>
+<a target="_blank" href="http://www.saxtravaganza.com">
+<img align="center" src="Event_Pages/music2017/saxtravaganza.jpg"/>
 </a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -332,17 +338,11 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, June 3<sup>rd</sup> 1pm&ndash;4pm</td>
-                                      <td id="Event">
-<a href="Event_Pages/music2017/bacoradoFlyer.jpg" rel="lightbox[bacorado]">
-                                      "Hart of the West" Music in the Park
-</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Sunday, June 25<sup>th</sup></td>
                                       <td id="Event">
+<a target="_blank" href="http://www.saxtravaganza.com">
                                       "Saxtravaganza" all-saxophone chamber ensemble
+</a><span><img src="images/ExternalLink.png"/></span>
                                       </td>
                                     </tr>
                                     <tr>
@@ -355,7 +355,9 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       Aug. 18<sup>th</sup>
                                       </td>
                                       <td id="Event">
+<a href=        "Event_Pages/movies2017/eveningMovies.jpg" rel="lightbox[movies]">
                                       Summer Movies in the Park Series
+</a>
                                       </td>
                                     </tr>
                                     <tr>
