Typo on powwow, plus removed past events and added Matinee movie.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -383,7 +383,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                         is with great pleasure that we
                                         invite you to experience a
                                         significant slice of Native
-                                        American culture at the 23<sup>rd</sup>
+                                        American culture at the 24<sup>th</sup>
                                         Annual Hart of the West Powwow.
                                         We hope you will come and enjoy
                                         the dancers, drummers and the
