--- a/index.html
+++ b/index.html
@@ -348,7 +348,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     <tr>
                                       <td id="EventDate">
                                       Fridays at dusk &mdash; 
-                                      June 16<sup>th</sup>, 
                                       June 30<sup>th</sup>, 
                                       July 14<sup>th</sup>, 
                                       July 28<sup>th</sup>, 
@@ -357,6 +356,16 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                       <td id="Event">
 <a href=        "Event_Pages/movies2017/eveningMovies.jpg" rel="lightbox[movies]">
                                       Summer Movies in the Park Series
+</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">
+                                      Sunday, July 16<sup>th</sup> at 12:30pm
+                                      </td>
+                                      <td id="Event">
+<a href=        "Event_Pages/movies2017/matinees.jpg" rel="lightbox[movies]">
+                                      Movies Matinee in the Park:  The Jungle Book
 </a>
                                       </td>
                                     </tr>
