Added Silents Flyer, removed saxstravaganza, added Pacific Islander pics.

--- a/index.htm
+++ b/index.htm
@@ -203,6 +203,41 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 <tr>
                                 <td>
 <h3 align="center"?>
+Click below for photos of the <i>2017 Pacific Islander Festival</i> events that took place last May<br>
+</h3>
+<a href= "Event_Pages/pacificfest2017/poly1.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly1.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly2.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly2.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly3.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly3.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly4.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly4.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly5.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly5.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly6.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly6.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly7.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly7.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly8.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly8.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly9.jpeg" title="Pacific Islander Festival" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly9.jpeg" /></a>
+<a href= "Event_Pages/pacificfest2017/poly-proposal.jpeg" title="A Proposal happens at Pacific Islander Festival!" rel="lightbox[pacific]">
+<img src="Event_Pages/pacificfest2017/thumbs/poly-proposal.jpeg" /></a>
+                                </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                <td>
+<h3 align="center"?>
 Click below for photos of the <i>2017 Cowboys Festival</i> events that took place Bill Hart's living room<br>
 <a href=        "Event_Pages/cowboyfest2017/CowboyFest2017_00.jpg" title="Dave Stamey" rel="lightbox[cowboyfest]">
 <img src="Event_Pages/cowboyfest2017/thumbs/CowboyFest2017_00.jpg" /></a>
@@ -316,19 +351,10 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     </p>
 -->
 <a href="Event_Pages/silents.html">
-<h2 align="center">Get your tickets to this year's Silents Under the Stars here!</h2>
-<img align="center" src="Event_Pages/silents/Silents2017web.jpg"/>
+<h3 align="center">Get your tickets to this year's Silents Under the Stars here!</h3>
+<img align="center" src="Event_Pages/silents/silents2017webflyer.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
-</a>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<h>Come listen to Music in the Park!</h3>
-<a target="_blank" href="http://www.saxtravaganza.com">
-<h4>Saxtravaganza takes the stage for 18th year!</h4>
-</a>
-<h4>Sunday, June 25<sup>th</sup> 7pm</h4>
-<a target="_blank" href="http://www.saxtravaganza.com">
-<img align="center" src="Event_Pages/music2017/saxtravaganza.jpg"/>
 </a>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2017 Calendar of Events</h2>
@@ -337,14 +363,6 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Sunday, June 25<sup>th</sup></td>
-                                      <td id="Event">
-<a target="_blank" href="http://www.saxtravaganza.com">
-                                      "Saxtravaganza" all-saxophone chamber ensemble
-</a><span><img src="images/ExternalLink.png"/></span>
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">
                                       Fridays at dusk &mdash; 
