Updates to web page        3 hours: Powwow update Museum hours update Membership details update Removed old events

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -215,7 +215,8 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 M.C.
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Michael Whitehorse Avilas / 
+                                                Gabrieleno Tongva / So. Paiute / Shoshone
                                           </td>
                                         </tr>
                                         <tr>
@@ -223,7 +224,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Arena Director
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Victor Chavez / Dine'
                                           </td>
                                         </tr>
                                         <tr>
@@ -231,7 +232,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Spiritual Director
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Ted Garcia / Chumash
                                           </td>
                                         </tr>
                                         <tr>
@@ -241,7 +242,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Michael Runningwind / Seneca / Chiricahua Apache
                                           </td>
                                         </tr>
                                         <tr>
@@ -249,9 +250,10 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Janet Snyder / Dine'
                                           </td>
                                         </tr>
+                                        <!--
                                         <tr>
                                           <td id="PowWowRole">
                                                 Headboy
@@ -269,6 +271,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 TBA
                                           </td>
                                         </tr>
+                                        -->
                                         <tr>
                                           <td id="PowWowRole">
                                                 Eagle Staff
@@ -282,7 +285,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Northern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Blue Star
                                           </td>
                                         </tr>
                                         <tr>
@@ -290,7 +293,7 @@ Sunday, October 1<sup>st</sup> &mdash; 10am to 6pm
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                TBA
+                                                Hale & Company
                                           </td>
                                         </tr>
                                         <tr>
