--- a/Mansion/museum.html
+++ b/Mansion/museum.html
@@ -29,10 +29,20 @@ www.hartmuseum.org">
 <P>The Hart Museum sits atop a hill within a large park area. It is a house museum that was once the retirement home of William S. Hart, a silent-screen cowboy movie star. 
 The Spanish colonial Revival style mansion contains original furnishings, an impressive collection of western art, mementos or early Hollywood and Native American artifacts. 
 In addition, there is a furnished 1910 ranch house which is open for unguided tours.<br><br>The surrounding park grounds are operated by the Los Angeles County Department of 
-Parks and Recreation. Picnic facilities are available in the park. There is a nature trail, a live farm animal exhibit, and a herd of bison occupies part of the range area of 
-this 260 acre "Horseshoe Ranch."<br><br>William S. Hart park is less than an hour's drive from most areas of Los Angeles. From mid-September to mid-June, <b>free tours</b> of the house 
-are available Wednesday through Sunday, noon to 3pm (last tour at 2:30). In summer, tours are available Wednesday 
-through Sunday, 11am to 4pm (last tour at 3:30). Handicap accommodations are available.</P>
+Parks and Recreation. Picnic facilities are available in the park. There is a nature trail, a live farm animal exhibit, a herd of bison occupying part of the range area of 
+this 260 acre "Horseshoe Ranch", and <b>free tours</b> of the house!<br><br>William S. Hart park is less than an hour's drive from most areas of Los Angeles. </p>
+<p>
+From mid-September to mid-June, tours
+are available Wednesday through Sunday, noon to 3pm (last tour at 2:30). </p><p>In summer, tours are as follows:</p>
+<ul>
+<li>
+Wednesday though Friday, every half hour, 11am to 4pm (last tour at 3:30pm).
+</li>
+<li>
+Saturday &amp; Sunday we often feature longer tours!  They begin every hour 11am to the last tour at 3pm.
+</li>
+</ul>
+<p>Handicap accommodations are available.</P>
 <p> For more Museum information, visit <a href="http://www.hartmuseum.org" target="_blank">www.hartmuseum.org</a>.</p>
 			</TD>
 		</TR>
