--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -134,7 +134,10 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 					<td><b>Family&mdash;$40</b></td>
 				</TR>
 				<TR>
-					<td><b>Senior/Student&mdash;$15</b></td>
+					<td><b>Senior&mdash;$15</b></td>
+				</TR>
+				<TR>
+					<td><b>Student&mdash;$15</b></td>
 				</TR>
 				<TR>
 					<td><b>Sponsor&mdash;$75</b></td>
@@ -151,7 +154,7 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 					<td><b>Silver&mdash;$250</b></td>
 					<td>Newsletter Recognition</td>
 					<td>Personalized Museum &amp; Park Tour</td>
-					<td>2 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
+					<td>4 tickets to <a href="../Event_Pages/silents.html">Silents Under The Stars</a></td>
 					<td>Hart DVD from <a href="../Trading_Post/store.html">Trading Post</a> Gift Shop</td>
 					<td>Recognition on Donor Board</td>
 				</TR>
@@ -181,18 +184,6 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 					<td>Free rental of <a href="../Hart_Hall/hart_hall.html">Hart Hall</a> for 1 corporate event 
 					(<a href="../Contact/contact.html">call Park</a> for details)</td>
 				</TR>
-				<TR>
-					<td><b>Volunteer&mdash;$25</b></td>
-					<td>Monthly newsletter</td>
-					<td>Free workshops</td>
-					<td>Lectures, field trips and more</td>
-					<td>10% discount at <a href="../Trading_Post/store.html">Trading Post</a> gift shop</td>
-					<td>Free admission to 
-					<a href="http://www.nhm.org/" target="_blank">Natural History Museum</a>
-					 and 20% off at their gift shop </td>
-					<td><b>Note: Museum volunteers are expected to join The Friends and meet other requirements.
-					<a href="../Contact/contact.html">Call Museum</a> for details.</b></td>
-				</TR>
 			</tbody>
 		</table>
 		</h4>
@@ -201,7 +192,7 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 <input type="hidden" name="hosted_button_id" value="F7U4PL4HUPBSW">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select the level of your new membership:">Select the level of your new membership:</td></tr><tr><td><select name="os0">
-    <option value="Individual or Volunteer (see Note)">Individual or Volunteer (see Note) $25.00 USD</option>
+    <option value="Individual">Individual $25.00 USD</option>
     <option value="Family">Family $40.00 USD</option>
     <option value="Sponsor">Sponsor $75.00 USD</option>
     <option value="Patron">Patron $125.00 USD</option>
@@ -209,7 +200,7 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
     <option value="Gold">Gold $500.00 USD</option>
     <option value="Diamond">Diamond $1,000.00 USD</option>
     <option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
-    <option value="Senior/Student">Senior/Student $15.00 USD</option>
+    <option value="Senior or Student">Senior or Student $15.00 USD</option>
     <option value="Lifetime Individual">Lifetime Individual $500.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Phone Number:">Phone Number:</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
@@ -218,7 +209,6 @@ All the proceeds from your membership go to supporting our ongoing efforts for t
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-
 
 
 </p>
