Added the Alpacas to the animals section, and fixed two very old bugs (pre-me) in the membership pages.

--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -116,7 +116,7 @@ function MM_swapImage() { //v3.0
 							<TR>
 								<TD>
 								<div align="center">
-								<IMG border="0" src="images/deer_LayingDown.jpg" width="154"
+								<IMG border="0" src="images/alpacas.jpg" width="298"
 									height="175">
 								</div>
 								</TD>
@@ -161,7 +161,7 @@ To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see t
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 					<b><i><font size="4" color="#0050A5"><br>In addition to the bison roaming the hills of the 265 acre park, there 
 					is also a newly refurbished animal area that the kids will 
-					love!&nbsp; Come on by and enjoy the horses, a cow, a deer and several ducks, chickens, etc.&nbsp;
+					love!&nbsp; Come on by and enjoy the horses, alpacas, a deer and several ducks, chickens, etc.&nbsp;
 					</font></i></b></p>
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">&nbsp;</p>
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
