Made Silents Sold Out!

--- a/index.htm
+++ b/index.htm
@@ -351,7 +351,7 @@ Click below for photos of the <i>2016 Cowboys and Carols</i> holidaytime celebra
                                     </p>
 -->
 <a href="Event_Pages/silents.html">
-<h3 align="center">Get your tickets to this year's Silents Under the Stars here!</h3>
+<h3 align="center">See you tonight at this year's Silents Under the Stars!</h3>
 <img align="center" src="Event_Pages/silents/silents2017webflyer.jpg"/>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
