--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -134,32 +134,12 @@ function MM_swapImage() { //v3.0
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
 											<span class="Apple-style-span">
 											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<h3>Buy tickets here! </h3>
-											<h4>(select quantity on shopping cart page)</h4>
-<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="YR6M7R7NF52VL">
-<table>
-<tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
-    <option value="Individual Ticket">Individual Ticket $50.00 USD</option>
-    <option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
-</select> </td></tr>
-<tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-
+											<h3 align="center">Sold Out!</h3><br><br>
 											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
 
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">To buy tickets over the phone, or for 
-											additional info, Call<br>(661) 222&ndash;9542</font></p>
+											<font size="4">For additional info, Call<br>(661) 222&ndash;9542</font></p>
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<span style="letter-spacing: normal">
-											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
-											<font size="4">Tickets are non-Refundable</font></span></span></p>
 											</TD>
 											</TR>
 											<TR>
